bugfix(VAN-15243) voip none installed app notes aligned

--- a/vtr-ui/src/app/components/pages/page-device-settings/children/subpage-device-settings-input-accessory/subpage-device-settings-input-accessory.component.scss
+++ b/vtr-ui/src/app/components/pages/page-device-settings/children/subpage-device-settings-input-accessory/subpage-device-settings-input-accessory.component.scss
@@ -290,6 +290,10 @@ $fontsize_xs: 1.4rem;
 		margin-left: 4.5rem !important;
 		padding-left: 0;
 	}
+
+	.noInstalledAppsNote {
+		padding-left: 4.5rem;
+	}
 }
 
 .app-icon {
